# http-fondamentals

./: .gitignore  .nojekyll  README.md  _quarto.yml  index.html  index.qmd  pyproject.toml  robots.txt  search.json  sitemap.xml
.github/workflows/: publish.yml
assets/: hurl-highlight.js  styles.css
chapters/: 01-http-basics.html  01-http-basics.qmd  02-http-methods.html  02-http-methods.qmd  03-http-headers.html  03-http-headers.qmd  04-status-codes.html  04-status-codes.qmd  05-request-response.html  05-request-response.qmd  06-authentication.html  06-authentication.qmd  07-advanced.html  07-advanced.qmd
docs/: DEPLOYMENT.html  DEPLOYMENT.md
