[project]
name = "http-fondamentals"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "micedre", email = "cedric.couralet@insee.fr" }
]
requires-python = ">=3.13"
dependencies = [
    "jupyter-hurl-kernel>=0.0.12",
    "quarto>=0.1.0",
]

[build-system]
requires = ["uv_build>=0.9.4,<0.10.0"]
build-backend = "uv_build"
